# hs-rs-notify

./: LICENSE  README.md  hs-rf-notify.cabal  hs-rs-notify.cabal  stack.yaml
app/: Main.hs
includes/: libnotifier.dylib
notifier/: Cargo.toml
notifier/src/: lib.rs
src/: FLib.hs  Notify.hs
